@@ -37,6 +37,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 - bug #1789988 [display] space before SHOW COLUMNS
 - bug #1831646 [table creation] Error in CREATE TABLE with multiple primary
   keys and AUTO_INCREMENT
+- [display] Division by zero when showing all records (page selector)
 
 2.11.2.1 (2007-11-11)
 - fixed possible SQL injection using database name
